web: * done tweaking with graphs * add mobile icons to history

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -97,6 +97,10 @@ h6 {
 
   --clr-sky10: hsl(193 87% 66.5%);
 
+  --clr-green7: hsl(146 38.5% 69%);
+  --clr-green8: hsl(151 40.2% 54.1%);
+  --clr-green9: hsl(151 55% 41.5%);
+
   --clr-black: #000;
   --clr-white: #fff;
 
