web: * componentize dialog * remove useTimeout on item add * type changes related to prev api changes(8fc4fd55a207) * modified mui-c/button

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -96,6 +96,7 @@ h6 {
   --clr-red11: hsl(358 65% 48.7%);
 
   --clr-sky10: hsl(193 87% 66.5%);
+  --clr-sky11: rgb(49, 173, 207);
 
   --clr-green7: hsl(146 38.5% 69%);
   --clr-green8: hsl(151 40.2% 54.1%);
