--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -157,3 +157,20 @@ body {
   word-break: break-all;
   margin: 1rem 0;
 }
+.status {
+  font-size: 1.5rem;
+  color: green;
+  overflow-wrap: anywhere;
+  word-break: break-all;
+  margin: 1rem 0;
+}
+
+.back-link {
+  color: var(--clr-amber10);
+  font-size: 1.75rem;
+  font-weight: 500;
+  line-height: 1.7rem;
+  text-align: left;
+  margin: 1.5rem 0;
+  text-decoration: underline;
+}
